--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Typing Break 3.2.5
+==================
+
+- Install gnome-typing-monitor in libexec dir (#672553)
+- Translation updates
+
 Typing Break 3.2.4
 ==================
 
