--- a/po/sl.po
+++ b/po/sl.po
@@ -1,21 +1,21 @@
 # Slovenian translations of drwright.
-# Copyright (C) 2009 drwright's COPYRIGHT HOLDER
+# Copyright (C) 2012 drwright's COPYRIGHT HOLDER
 # This file is distributed under the same license as the drwright package.
 #
-# Matej Urbančič <mateju@svn.gnome.org>, 2010 - 2011.
+# Matej Urbančič <mateju@svn.gnome.org>, 2010 - 2012.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gnome-control-center master\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=drwright&component=general\n"
-"POT-Creation-Date: 2011-03-07 18:15+0000\n"
-"PO-Revision-Date: 2011-03-10 16:55+0100\n"
+"Project-Id-Version: drwright master\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=drwright&keywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2012-05-15 17:51+0000\n"
+"PO-Revision-Date: 2012-05-16 19:39+0100\n"
 "Last-Translator: Matej Urbančič <mateju@svn.gnome.org>\n"
 "Language-Team: Slovenian GNOME Translation Team <gnome-si@googlegroups.com>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 1 : n%100==2 ? 2 : n%100==3 || n%100==4 ? 3 : 0);\n"
 "X-Poedit-Country: SLOVENIA\n"
 "X-Poedit-Language: Slovenian\n"
@@ -29,74 +29,78 @@ msgstr "Omogoči razhroščevanje kode"
 msgid "Typing Monitor"
 msgstr "Nadzornik tipkanja"
 
-#: ../src/drwright.c:168
+#: ../src/drwright.c:213
 msgid "Typing Break Reminder"
-msgstr "Opomnik premora tipkanja"
+msgstr "Opomnik za premor tipkanja"
 
-#: ../src/drwright.c:171
+#: ../src/drwright.c:216
 #, c-format
 msgid "Approximately %d minute to the next break."
 msgid_plural "Approximately %d minutes to the next break."
-msgstr[0] "Približno %d minut je še do naslednjega premora."
-msgstr[1] "Približno %d minuta je še do naslednjega premora."
-msgstr[2] "Približno %d minuti je še do naslednjega premora."
-msgstr[3] "Približno %d minute je še do naslednjega premora."
+msgstr[0] "Približno %d minut do naslednjega premora."
+msgstr[1] "Približno %d minuto do naslednjega premora."
+msgstr[2] "Približno %d minuti do naslednjega premora."
+msgstr[3] "Približno %d minute do naslednjega premora."
 
-#: ../src/drwright.c:177
+#: ../src/drwright.c:222
 msgid "Less than one minute to the next break."
-msgstr "Manj kot minuta je še do premora."
+msgstr "Manj kot minuta do naslednjega premora."
 
-#: ../src/drwright.c:189
+#: ../src/drwright.c:234
 msgid "Settings…"
 msgstr "Nastavitve ..."
 
-#: ../src/drwright.c:193
+#: ../src/drwright.c:238
 msgid "Take Break Now"
 msgstr "Čas je za odmor"
 
-#: ../src/drw-break-window.c:189
+#: ../src/drw-break-window.c:255
 msgid "_Postpone Break"
-msgstr "_Preloži odmor"
+msgstr "_Prestavi odmor"
 
-#: ../src/drw-break-window.c:234
+#: ../src/drw-break-window.c:281
+msgid "_Lock Screen"
+msgstr "_Zakleni zaslon"
+
+#: ../src/drw-break-window.c:308
 msgid "Take a break!"
 msgstr "Čas je za odmor!"
 
 #: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:1
-msgid "Number of seconds of typing time before break mode starts"
-msgstr "Čas tipkanja v sekundah, preden se začne način premora"
-
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:2
-msgid "Number of seconds that the typing break should last"
-msgstr "Število sekund, kolikor naj traja premor tipkanja"
-
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:3
-msgid "Phrase to unlock the break screen with"
-msgstr "Reklo za odklepanje zaslona premora"
-
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:4
-msgid "Priority to use for this plugin"
-msgstr "Prednost pri uporabi tega vstavka"
-
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:5
 msgid "Whether the settings daemon should activate the typing break plugin"
 msgstr "Ali naj ozadnji program nastavitev omogoči vstavek za premor med tipkanjem"
 
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:6
-msgid "Whether the typing break can be postponed"
-msgstr "Ali je mogoče premor med tipkanjem preložiti na kasnejši čas"
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:2
+msgid "Priority to use for this plugin"
+msgstr "Prednost uporabe tega vstavka"
 
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:7
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:3
 msgid "Whether typing break is enabled"
 msgstr "Ali je omogočen vstavek za nadzor premorov tipkanja"
 
-#: ../src/gnome-typing-break-panel.desktop.in.in.h:1
-msgid "Change typing break settings"
-msgstr "Spreminjanje nastavitev premora tipkanja"
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:4
+msgid "Whether the typing break can be postponed"
+msgstr "Ali je mogoče premor med tipkanjem prestaviti"
 
-#: ../src/gnome-typing-break-panel.desktop.in.in.h:2
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:5
+msgid "Number of seconds of typing time before break mode starts"
+msgstr "Po koliko sekundah tipkanja naj se začne odmor"
+
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:6
+msgid "Number of seconds that the typing break should last"
+msgstr "Koliko sekund naj traja premor med tipkanjem"
+
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:7
+msgid "Phrase to unlock the break screen with"
+msgstr "Geslo za odklepanje zaslona premora"
+
+#: ../src/gnome-typing-break-panel.desktop.in.in.h:1
 msgid "Typing Break"
 msgstr "Premor tipkanja"
+
+#: ../src/gnome-typing-break-panel.desktop.in.in.h:2
+msgid "Change typing break settings"
+msgstr "Spreminjanje nastavitev premora tipkanja"
 
 # PPO = Poškodbe zaradi ponavljajočih se obremenitev
 #. Translators: those are keywords for the example control-center panel
@@ -105,65 +109,17 @@ msgid "Typing;Break;RSI;Workrave;"
 msgstr "Tipkanje;Premor;PPO;Delo;"
 
 #: ../src/drwright-panel.glade.h:1
-msgid "_Allow postponing of breaks"
-msgstr "_Dovoli prelaganje premorov"
+msgid "_Lock screen to enforce typing break"
+msgstr "_Zakleni zaslon za vsiljen premor med tipkanjem"
 
 #: ../src/drwright-panel.glade.h:2
 msgid "_Break interval lasts:"
 msgstr "_Trajanje premora:"
 
 #: ../src/drwright-panel.glade.h:3
-msgid "_Lock screen to enforce typing break"
-msgstr "_Zakleni zaslon za vsiljen premor med tipkanjem"
-
-#: ../src/drwright-panel.glade.h:4
 msgid "_Work interval lasts:"
 msgstr "Časovni _razmik traja:"
 
-#~ msgid "Don't check whether the notification area exists"
-#~ msgstr "Ne preveri ali opozorilni pult obstaja"
-
-#~ msgid ""
-#~ "The typing monitor uses the notification area to display information. You "
-#~ "don't seem to have a notification area on your panel. You can add it by "
-#~ "right-clicking on your panel and choosing 'Add to panel', selecting "
-#~ "'Notification area' and clicking 'Add'."
-#~ msgstr ""
-#~ "Nadzornik tipkanja uporablja področje obvestil za prikaz podatkov. Videti "
-#~ "je, da na pultu ni omogočenega tega področja. Dodati ga je mogoče z "
-#~ "desnim klikom na pult z izbiro možnosti 'Dodaj pultu', nato 'Področje "
-#~ "obvestil' in nazadnje 'Dodaj'."
-
-#~ msgid "Disabled"
-#~ msgstr "Onemogočeno"
-
-#~ msgid "Take a break now (next in %dm)"
-#~ msgstr "Čas je za premor (naslednji bo če %d minut)"
-
-#~ msgid "Take a break now (next in less than one minute)"
-#~ msgstr "Čas je za premor (naslednji bo če manj kot minuto)"
-
-#~ msgid ""
-#~ "Unable to bring up the typing break properties dialog with the following "
-#~ "error: %s"
-#~ msgstr ""
-#~ "Ni mogoče prikazati pogovornega okna lastnosti premora tipkanja zaradi "
-#~ "napake: %s"
-
-#~ msgid "Written by Richard Hult <richard@imendio.com>"
-#~ msgstr "Program je napisal Richard Hult <richard@imendio.com>"
-
-#~ msgid "Eye candy added by Anders Carlsson"
-#~ msgstr "Program je grafično oblikoval Anders Carlsson"
-
-#~ msgid "A computer break reminder."
-#~ msgstr "Opomnik za  premor."
-
-#~ msgid "translator-credits"
-#~ msgstr "Matej Urbančič <mateju@svn.gnome.org>"
-
-#~ msgid "Typing Break preferences panel"
-#~ msgstr "Pult možnosti premora tipkanja"
-
-#~ msgid "minutes"
-#~ msgstr "minut"
+#: ../src/drwright-panel.glade.h:4
+msgid "_Allow postponing of breaks"
+msgstr "_Dovoli prestavljanje premorov"
