Keywords: MUST end with a semicolon (character: ;)

--- a/po/da.po
+++ b/po/da.po
@@ -107,7 +107,7 @@ msgstr "Skift indstillinger for indtastningspause"
 #. Translators: those are keywords for the example control-center panel
 #: ../src/gnome-typing-break-panel.desktop.in.in.h:4
 msgid "Typing;Break;RSI;Workrave;"
-msgstr "Indtastning;pause;RSI;arbejdsraseri"
+msgstr "Indtastning;pause;RSI;arbejdsraseri;"
 
 #: ../src/drwright-panel.glade.h:1
 msgid "_Lock screen to enforce typing break"
