--- a/po/es.po
+++ b/po/es.po
@@ -144,7 +144,7 @@ msgstr "Descanso de escritura"
 #. Translators: those are keywords for the example control-center panel
 #: ../src/gnome-typing-break-panel.desktop.in.in.h:4
 msgid "Typing;Break;RSI;Workrave;"
-msgstr "Teclear;Descanso;Pausa;Escribir"
+msgstr "Teclear;Descanso;Pausa;Escribir;"
 
 #: ../src/drwright-panel.glade.h:1
 msgid "_Allow postponing of breaks"
