--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Typing Break 3.5.0
+==================
+
+- Build fixes
+- Use GResource
+- Translation updates
+
 Typing Break 3.2.5
 ==================
 
