--- a/po/pl.po
+++ b/po/pl.po
@@ -4,12 +4,16 @@
 # pomóc w jego rozwijaniu i pielęgnowaniu, napisz do nas:
 # gnomepl@aviary.pl
 # -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# Jarosław Świerad <messer@messer.homelinux.org>, 2003.
+# Artur Flinta <aflinta@at.kernel.pl>, 2003.
+# Piotr Drąg <piotrdrag@gmail.com>, 2009-2012.
+# Aviary.pl <gnomepl@aviary.pl>, 2009-2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: drwright\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-05-18 17:19+0200\n"
-"PO-Revision-Date: 2012-05-18 17:20+0200\n"
+"POT-Creation-Date: 2012-09-01 21:53+0200\n"
+"PO-Revision-Date: 2012-09-01 21:54+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <gnomepl@aviary.pl>\n"
 "Language: pl\n"
