--- a/po/lt.po
+++ b/po/lt.po
@@ -10,15 +10,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-control-center master\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=drwright&component=general\n"
-"POT-Creation-Date: 2011-03-06 23:25+0000\n"
-"PO-Revision-Date: 2012-09-22 13:40+0300\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=drwright&keywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2012-09-22 10:45+0000\n"
+"PO-Revision-Date: 2012-09-22 13:45+0300\n"
 "Last-Translator: Aurimas Černius <aurisc4@gmail.com>\n"
 "Language-Team: Lietuvių <gnome-lt@lists.akl.lt>\n"
+"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: lt\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Virtaal 0.6.1\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
@@ -34,80 +34,77 @@ msgstr "Įjungti derinimo kodą"
 msgid "Typing Monitor"
 msgstr "Spausdinimo stebyklė"
 
-#: ../src/drwright.c:168
-#| msgid "Break reminder"
+#: ../src/drwright.c:213
 msgid "Typing Break Reminder"
 msgstr "Spausdinimo pertraukėlių priminėjas"
 
-#: ../src/drwright.c:171
+#: ../src/drwright.c:216
 #, c-format
-#| msgid "%d minute until the next break"
-#| msgid_plural "%d minutes until the next break"
 msgid "Approximately %d minute to the next break."
 msgid_plural "Approximately %d minutes to the next break."
 msgstr[0] "Apytiksliai %d minutė iki kitos pertraukėlės"
 msgstr[1] "Apytiksliai %d minutės iki kitos pertraukėlės"
 msgstr[2] "Apytiksliai %d minučių iki kitos pertraukėlės"
 
-#: ../src/drwright.c:177
-#| msgid "Less than one minute until the next break"
+#: ../src/drwright.c:222
 msgid "Less than one minute to the next break."
 msgstr "Mažiau nei viena minutė iki kitos pertraukėlės."
 
-#: ../src/drwright.c:189
-#| msgid "X Settings"
+#: ../src/drwright.c:234
 msgid "Settings…"
 msgstr "Nustatymai..."
 
-#: ../src/drwright.c:193
-#| msgid "_Take a Break"
+#: ../src/drwright.c:238
 msgid "Take Break Now"
 msgstr "Pailsėkite"
 
-#: ../src/drw-break-window.c:189
+#: ../src/drw-break-window.c:255
 msgid "_Postpone Break"
 msgstr "_Atidėti pertraukėlę"
 
-#: ../src/drw-break-window.c:234
+#: ../src/drw-break-window.c:281
+msgid "_Lock Screen"
+msgstr "_Užrakinti ekraną"
+
+#: ../src/drw-break-window.c:308
 msgid "Take a break!"
 msgstr "Pailsėkite!"
 
 #: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:1
-msgid "Number of seconds of typing time before break mode starts"
-msgstr "Spausdinimo sekundžių skaičius iki prasidedant veiksenai"
-
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:2
-msgid "Number of seconds that the typing break should last"
-msgstr "Sekundžių skaičius, kurų turėtų trukti spausdinimo pertraukėlė"
-
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:3
-msgid "Phrase to unlock the break screen with"
-msgstr "Frazė pertraukėlės ekranui atrakinti"
-
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:4
-msgid "Priority to use for this plugin"
-msgstr "Šio įskiepio prioritetas"
-
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:5
 msgid "Whether the settings daemon should activate the typing break plugin"
 msgstr "Ar nustatymų darnyba turi aktyvuoti spausdinimo pertraukėlės įskiepį"
 
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:6
-msgid "Whether the typing break can be postponed"
-msgstr "Ar spausdinimo pertraukėlė gali būti atidėta"
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:2
+msgid "Priority to use for this plugin"
+msgstr "Šio įskiepio prioritetas"
 
-#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:7
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:3
 msgid "Whether typing break is enabled"
 msgstr "Ar spausdinimo pertraukėlė įjungta"
 
-#: ../src/gnome-typing-break-panel.desktop.in.in.h:1
-#| msgid "Enable typing breaks plugin"
-msgid "Change typing break settings"
-msgstr "Keisti spausdinimo pertraukėlės nustatymus"
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:4
+msgid "Whether the typing break can be postponed"
+msgstr "Ar spausdinimo pertraukėlė gali būti atidėta"
 
-#: ../src/gnome-typing-break-panel.desktop.in.in.h:2
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:5
+msgid "Number of seconds of typing time before break mode starts"
+msgstr "Spausdinimo sekundžių skaičius iki prasidedant veiksenai"
+
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:6
+msgid "Number of seconds that the typing break should last"
+msgstr "Sekundžių skaičius, kurų turėtų trukti spausdinimo pertraukėlė"
+
+#: ../src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in.h:7
+msgid "Phrase to unlock the break screen with"
+msgstr "Frazė pertraukėlės ekranui atrakinti"
+
+#: ../src/gnome-typing-break-panel.desktop.in.in.h:1
 msgid "Typing Break"
 msgstr "Spausdinimo pertraukėlė"
+
+#: ../src/gnome-typing-break-panel.desktop.in.in.h:2
+msgid "Change typing break settings"
+msgstr "Keisti spausdinimo pertraukėlės nustatymus"
 
 #. Translators: those are keywords for the example control-center panel
 #: ../src/gnome-typing-break-panel.desktop.in.in.h:4
@@ -115,18 +112,18 @@ msgid "Typing;Break;RSI;Workrave;"
 msgstr "Spausdinimas;Pertraukėlė;Poilsis;"
 
 #: ../src/drwright-panel.glade.h:1
-msgid "_Allow postponing of breaks"
-msgstr "_Leisti atidėti pertraukėles"
+msgid "_Lock screen to enforce typing break"
+msgstr "Už_rakinti ekraną verčiant pailsėti nuo spausdinimo"
 
 #: ../src/drwright-panel.glade.h:2
 msgid "_Break interval lasts:"
 msgstr "_Pertraukėlės tęsiasi:"
 
 #: ../src/drwright-panel.glade.h:3
-msgid "_Lock screen to enforce typing break"
-msgstr "Už_rakinti ekraną verčiant pailsėti nuo spausdinimo"
-
-#: ../src/drwright-panel.glade.h:4
 msgid "_Work interval lasts:"
 msgstr "_Darbo periodas tęsiasi:"
+
+#: ../src/drwright-panel.glade.h:4
+msgid "_Allow postponing of breaks"
+msgstr "_Leisti atidėti pertraukėles"
 
